# drugdesign

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
drugdesign/data/: preprocessor.py
envs/: environment.yaml
tests/: test_preporcessor.py
tests/data/: 2w1i_C_L0I.sdf
