[tool.poetry]
name = "drugdesign"
version = "0.1.0"
description = ""
authors = ["Thanapat <devpatrick.cho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rdkit = "^2024.3.6"
tqdm = "^4.67.0"
h5py = "^3.12.1"
selfies = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
matplotlib = "^3.9.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
yamllint = "^1.35.1"
jupyter = "^1.1.1"
nglview = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
